k8s/traefik-ingress/2.traefik.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      hostNetwork: true
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --api.insecure=true # 生产环境关闭
            - --api.dashboard=true # 生产环境关闭
            - --api.debug=true # 生产环境关闭
            - --log.level=DEBUG
            - --entryPoints.web.address=:80
            - --entrypoints.web.http.redirections.entryPoint.to=websecure # 全局 http 重定向到https
            - --entryPoints.websecure.address=:443
            - --providers.kubernetesingress
            - --certificatesresolvers.myresolver.acme.dnschallenge=true
            - --certificatesresolvers.myresolver.acme.dnschallenge.provider=dnspod # 提供商
            - --certificatesresolvers.myresolver.acme.storage=acme.json
            - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --certificatesresolvers.myresolver.acme.dnschallenge.resolvers=1.1.1.1:53,8.8.8.8:53
            - --certificatesresolvers.myresolver.acme.dnschallenge.delaybeforecheck=60
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: websecure
              containerPort: 443
              hostPort: 443
            - name: dashboard
              containerPort: 8080
              hostPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: dashboard
      port: 8080

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "myresolver"

spec:
  # 如果这里指明了 ingressClassName，那么上面的 IngressClass 的声明就是必须的
  ingressClassName: traefik
  rules:
    - host: <your-domain> # 上面的 dnspod (腾讯的) 解析的域名
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
